# Syntetisk-Kart

./: .gitignore  Oppgavebeskrivelse.md  README.md  pyproject.toml  synthetic_map.py
.github/: copilot-instructions.md
src/syntetisk_kart/: __init__.py  main.py  synthetic_n50_module.py  synthetic_vann.py  synthetic_veg_module.py
tests/: test_main.py
